--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -209,7 +209,79 @@
         <h2>Livro dos Mortos</h2>
 
         <img src="../../../back/imagens/egipcia/Book_of_the_dead_egypt.jpg" alt="">
+        <p>Ele remonta ao período do Novo Império. Seus textos foram produzidos em rolos de papiro, os quais eram envolvidos em pedaços do material de que eram elaboradas as múmias. As versões mais sofisticadas eram compostas de ricos ornamentos tipográficos, conhecidos como vinhetas.</p>
+        <p>Este livro continha principalmente preceitos mágicos e ladainhas que versavam sobre o destino dos que morreram. Ele orientava as pessoas quanto aos caminhos a seguir para se atingir o reino de Osíris – a principal divindade cultuada pelos egípcios, símbolo do renascimento da alma, de sua imortalidade -, os campos da bem-aventurança. Ao obedecer às instruções contidas neste sagrado manual, o Homem tinha condições de atingir um estágio elevado que o habilitava a se tornar um Espírito Santificado
+        </p>
+        <p>Os egípcios, que adotavam o Politeísmo, ou seja, o culto de vários deuses, encontravam neste Livro uma relação das adversidades com as quais se deparariam ao chegar no mundo espiritual, e nele poderiam também descobrir os vários recursos necessários para triunfar sobre estes obstáculos. Este conflito é muitas vezes encenado no próprio instante do enterro, revelando - nesta reprodução da luta entre o bem e o mal -, o quanto é importante o processo descrito no Livro dos Mortos.
+        </p>
+        <p>É patente também neste Livro a crença dos egípcios na imortalidade da alma e na fé em uma vida futura no mundo espiritual, bem como na reencarnação, que propicia ao Homem renascer na Terra para a aquisição de novos valores e para a obtenção de renovadas experiências. </p>
 
+        <h2>Criaturas Misticas</h2>
+        <p><strong> Ammut: </strong> Também conhecida como "Devoradora de Almas", é uma criatura com a cabeça de crocodilo, o corpo de leão e as pernas de hipopótamo. Ela é responsável por julgar as almas dos mortos no tribunal de Osíris.</p>
+        <p><strong>Serpente Apófis:</strong> Também chamada de Apep, era uma serpente gigante que representava o caos e tentava devorar o sol todas as noites durante a travessia pelo submundo.</p>
+        <p><strong>Bennu:</strong> É uma ave associada à criação e renovação. Acredita-se que o Bennu era uma forma da fênix, uma ave que se regenerava das próprias cinzas.</p>
+        <p><strong>Escaravelho:</strong> Embora seja um inseto comum, o escaravelho tinha uma grande importância simbólica no Egito Antigo. Era associado ao deus do sol, Rá, e à ideia de renascimento e ressurreição.
+        </p>
+        <p><strong>Leão de Nemeia:</strong> Apesar de ter origens na mitologia grega, o leão de Nemeia também tem uma presença na mitologia egípcia, muitas vezes associado à deusa Sekhmet, uma das formas da deusa leoa guerreira.
+        </p>
+        <p><strong>Gato:</strong> Os gatos eram considerados animais sagrados e eram associados à deusa Bastet, a deusa da casa, da fertilidade e da proteção.
+        </p>
+        <h2>Osíris</h2>
+        <p>Osíris é uma divindade que fez parte da religiosidade e da mitologia dos egípcios na Antiguidade. Com o passar do tempo, seu culto foi ganhando relevância, e os atributos relacionados com esse deus foram se modificando. Inicialmente, era considerado um deus da fertilidade, mas, com o tempo, foi vinculado à morte e à vida após a morte.</p>
+        <p>Nesse último atributo, Osíris era considerado o senhor do mundo dos mortos, aquele que reinava nesse domínio, sendo também quem conduzia o julgamento de todos os que morriam. Esse julgamento determinava o destino de cada pessoa na vida após a morte e baseava-se nas ações da pessoa em vida.</p>
+        <p>Era muito comum nas representações egípcias que Osíris fosse apresentado como um deus mumificado (existe um mito egípcio que narra a sua mumificação). Essa representação reforça os laços desse deus com a crença dos egípcios na vida após a morte e com a importância da mumificação e dos ritos funerários para esse povo.
+        </p>
+        <p>Na mitologia egípcia, Osíris era apresentado como o primeiro faraó egípcio, tendo governado a Terra junto de sua esposa, Ísis. Esse teria sido um período de paz, prosperidade e justiça, com Osíris sendo um bom governante e o responsável, junto de sua esposa, por ensinar valiosos ensinamentos para a humanidade, como o conhecimento da medicina e da agricultura.
+        </p>
+        <p>O fato de ter sido um faraó fazia com que Osíris fosse um deus muito relacionado com a nobreza egípcia, principalmente porque ele usava um atef, um tipo de coroa faraônica. Osíris também era representado com a cor negra ou verde de sua pele, associada com a lama do rio Nilo, reforçando também sua ligação com a fertilidade. O nome de Osíris no idioma dos egípcios era Usir, traduzido como “poderoso”.
+        </p>
+        <p>Osíris era uma divindade importante na religiosidade egípcia e, como tal, possuía um papel central nos mitos narrados por esse povo. Um mito que o envolve é um dos mais conhecidos de toda a mitologia egípcia.
+        </p>
+        <p>Os egípcios consideravam Osíris um governante bom e justo que trouxe importantes ensinamentos para a humanidade. Por isso, os mitos contam que Osíris era um governante respeitado e amado pelas pessoas, e isso causava grandes ciúmes em seu irmão Set. Assim, Set decidiu elaborar um plano para aprisionar seu irmão, matá-lo e se livrar do corpo. O plano deu certo, e Set conseguiu aprisionar Osíris em um sarcófago, jogando-o no rio Nilo.
+        </p>
+        <p>O corpo de Osíris viajou até a Fenícia, e lá foi resgatado por sua esposa, Ísis, que realizou uma grande jornada até achá-lo. Assim, ele foi levado de volta para o Egito para que Ísis realizasse um ritual para trazê-lo de volta à vida. Antes do ritual acontecer, Set encontrou o corpo de seu irmão e o esquartejou, espalhando as partes pelo Egito.
+        </p>
+        <p>Ísis iniciou uma nova jornada; desta vez, para encontrar todas as partes do corpo de Osíris. Ela conseguiu encontrá-las, menos uma, e assim realizou o ritual para ressuscitar seu marido. Depois disso, eles tiveram um filho, o deus Hórus, mas Osíris não pôde ficar no mundo dos vivos porque lhe faltava uma parte do corpo. Assim, ele foi reinar no mundo dos mortos.
+        </p>
+        <h2>Anubis</h2>
+        <p>Anúbis foi um deus da religiosidade dos egípcios antigos, representando os mortos e a mumificação. Com o tempo, uma significativa mudança nas crenças egípcias aconteceu e Anúbis foi cedendo esses atributos a Osíris. Assim, aquele se converteu em uma espécie de auxiliar deste.
+        </p>
+        <p>Além disso, passou a ser o protetor dos túmulos e cemitérios e quem guiava e protegia os mortos no além. Os egípcios o representavam com o corpo humano, mas com o rosto de chacal, de cor preta, que tinha duplo significado na cultura egípcia.</p>
+        <p>Por um lado, o preto representava a decomposição do corpo, portanto, a morte e a passagem para o além, mas também se referia ao renascimento da vida, pois era a mesma cor do solo fértil às margens do rio Nilo.
+        </p>
+        <p>O conhecimento atual dos historiadores permite dizer que as primeiras representações a esse deus remontam a cerca de 3100 a.C. Essas representações foram encontradas por meio de escavações arqueológicas em tumbas egípcias. Entretanto, acredita-se que o culto a Anúbis tenha se estabelecido durante o período Pré-Dinástico, entre 6100 a.C. e 3500 a.C.
+        </p>
+        <p>A ascensão de Osíris na religiosidade egípcia se deu por volta de 2000 a.C., e, a partir disso, Anúbis foi perdendo espaço para esse novo deus, que passou a ser o principal representante dos mortos para os egípcios. Essa mudança trouxe alterações até mesmo nos mitos que envolviam Anúbis, e ele passou a ser visto como filho de Néftis e Osíris.
+        </p>
+        <p>Com a popularização de Osíris, Anúbis foi colocado como uma espécie de auxiliar daquele, passando a proteger os túmulos e guiar os mortos na vida após a morte. Era ainda um dos deuses que participavam do Tribunal de Osíris, que julgava os mortos por suas ações, e também atuava na balança deste tribunal.
+        </p>
+        <p>Essa balança era determinante para o destino dos mortos: se eles gozariam da vida após a morte ou se seriam devorados por um monstro. Nessa balança, o coração do morto era pesado com uma pena, e, caso fosse mais leve, a morto poderia gozar da vida após a morte. Esse mito trazia o coração como símbolo das ações da pessoa em vida e a pena como símbolo do conceito de justiça para os egípcios.</p>
+        <p>Vimos que a popularização de Osíris fez com que Anúbis passasse a ser visto como seu filho. O mito do seu nascimento se iniciava com uma artimanha de Néftis, deusa da noite. Ela tinha interesse em Osíris, pois o achava muito bonito. Assim, ela se disfarçou de Ísis, a esposa de Osíris, e o seduziu.
+        </p>
+        <p>Néftis engravidou depois de se relacionar com Osíris, e, para evitar que seu marido, Set, descobrisse sua traição, decidiu abandonar a criança. Essa criança era Anúbis, que foi adotado por Ísis quando essa deusa descobriu o que havia acontecido. Eventualmente, Set também descobriu o que aconteceu e vingou-se assassinando Osíris.
+        </p>
+
+        <h2>Influência</h2>
+        <ul>
+          <li><strong>Religião e Culto:</strong> A mitologia egípcia estava intimamente ligada à religião do Egito Antigo. Deuses e deusas como Ra, Osíris, Ísis e Hórus desempenhavam papéis centrais na religião egípcia. Templos e rituais religiosos baseavam-se em narrativas mitológicas, e os faraós eram frequentemente considerados intermediários entre os deuses e o povo.</li>
+          <li><strong>Arquitetura e Monumentos:</strong> A mitologia influenciou a arquitetura de templos e monumentos egípcios, que frequentemente apresentavam relevos esculpidos e hieróglifos retratando histórias mitológicas e deidades.
+          </li>
+          <li><strong>Morte e Pós-Vida:</strong> A mitologia desempenhou um papel fundamental nas crenças sobre a morte e a vida após a morte no Egito Antigo. A crença na vida após a morte e o julgamento do coração dos falecidos no Tribunal de Osíris eram conceitos mitológicos centrais.
+          </li>
+          <li><strong>Literatura e Escrita:</strong> A mitologia egípcia foi registrada em textos religiosos e literários, como o "Livro dos Mortos" e "Textos das Pirâmides". Esses textos serviram como guias para a vida após a morte e continham histórias e feitiços mitológicos.
+          </li>
+          <li><strong>Arte e Iconografia:</strong> A mitologia egípcia é uma fonte constante de inspiração para a arte egípcia, com imagens de deuses, deusas e cenas mitológicas sendo comuns em esculturas, pinturas e jóias.</li>
+          <li><strong></strong>Astronomia e Cosmologia: Os antigos egípcios tinham uma ligação entre os deuses e o cosmos, e muitos deuses e deusas eram associados a corpos celestes, como o Sol e a Lua. Isso influenciou o estudo da astronomia e da cosmologia no Egito.
+          </li>
+          <li><strong>Política e Realeza:</strong> Os faraós eram frequentemente vistos como encarnações de divindades, como o deus Hórus. A mitologia legitimava o poder e a autoridade dos governantes egípcios.
+          </li>
+          <li><strong>Identidade Nacional:</strong> A mitologia egípcia desempenhou um papel na formação da identidade cultural egípcia, que se manteve ao longo de milênios e é valorizada até hoje.
+          </li>
+          <li><strong>Exploração Arqueológica:</strong> A mitologia egípcia continua a ser uma área de estudo e pesquisa acadêmica e arqueológica. Escavações e estudos de antigos templos e tumbas frequentemente revelam novas informações sobre a mitologia egípcia.</li>
+          <li><strongTurismo e Promoção Cultural:></strongTurismo> Os locais históricos e monumentos associados à mitologia egípcia, como as pirâmides, os templos e o Vale dos Reis, atraem turistas de todo o mundo, promovendo a cultura e o patrimônio egípcios.
+          </li>
+        </ul>
+        <h3>Após ter estudado a mitologia egípcia, gostaria de iniciar o quiz?</h3>
         <div class="botao">
           <a href="../quiz/egipcia.html"
             ><input type="button" value="COMEÇAR" id="btnComecar"
