--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -310,7 +310,7 @@
             <li><a href="../paginas/romana.html">Mitologia Romana</a></li>
           </ul>
         </div>
-
+        <p>Em resumo, a mitologia egípcia desempenhou um papel central na civilização egípcia antiga e continua a ser uma parte importante da cultura e do patrimônio egípcios. Sua influência é evidente em muitos aspectos da sociedade egípcia e ainda é estudada e apreciada em todo o mundo.</p>
       </div>
       <div class="footer-sociais" >
         <img src="../../../back/imagens/LYJEK(1).png" alt="">
