index quase pronto

--- a/front/site/paginas/index.html
+++ b/front/site/paginas/index.html
@@ -1,10 +1,3 @@
-<?php
-  if(!isset($_SESSION)) {
-    session_start();
-  }
-  
-  include('../../../back/protecao.php');
-?>
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -61,7 +54,7 @@
         </div>
         <div class="caixa grega">
           <div class="conteudocx">
-            <ion-icon name="flash-outline"></ion-icon>
+            <img src="imagens/icons/helenismo2.png" alt="" width="200px">
             <h2>Mitologia grega</h2>
             <p>A mitologia grega é um conjunto de lendas e histórias da Grécia Antiga sobre deuses, heróis e criaturas míticas que desempenharam papéis significativos na cultura e na compreensão do mundo naquela época.</p>
             <button class="alternar-aba" data-target="grega">Ver Mais</button>
@@ -80,7 +73,7 @@
         </div>
         <div class="caixa hindu">
           <div class="conteudocx">
-            <ion-icon name="image-outline"></ion-icon>
+            <img src="imagens/icons/hindu.png" alt="" width="200px">
             <h2>Mitologia hindu</h2>
             <p>A mitologia hindu é um conjunto de histórias e crenças da Índia, envolvendo diversos deuses e deusas, lendas e ensinamentos espirituais que têm sido fundamentais na cultura e na religião hindu ao longo da história.</p>
             <button class="alternar-aba" data-target="hindu">Ver Mais</button>
@@ -99,7 +92,7 @@
         </div>
         <div class="caixa irlandesa">
           <div class="conteudocx">
-            <ion-icon name="image-outline"></ion-icon>
+            <img src="imagens/icons/celta.png" alt="" width="200px">
             <h2>Mitologia irlandesa</h2>
             <p>A mitologia irlandesa é um rico conjunto de mitos e lendas que fazem parte do folclore da Irlanda. Ela apresenta deuses, heróis e criaturas mágicas, e desempenhou um papel importante na cultura irlandesa ao longo da história.</p>
             <button class="alternar-aba" data-target="irlandesa">Ver Mais</button>
@@ -157,7 +150,7 @@
         </div>
         <div class="caixa nordica">
           <div class="conteudocx">
-            <img src="imagens/icons/nordica.png" alt="">
+            <img src="imagens/icons/1200px-Aegishjalmr.svg.png" alt="" width="200px">
             <h2>Mitologia nordica</h2>
             <p>A mitologia nórdica, ou escandinava, é um conjunto de lendas e crenças das culturas da Escandinávia, incluindo deuses, heróis e criaturas míticas que desempenham papéis importantes nas histórias e na cultura desses povos.</p>
             <button class="alternar-aba" data-target="nordica">Ver Mais</button>
