css egípcia feita

--- a/front/site/quiz/egipcia.html
+++ b/front/site/quiz/egipcia.html
@@ -28,7 +28,7 @@
                         <li class="link-dropdown" id="linkGeral"><a href="geral.html">Geral</a></li>
                     </ul>
                 </li>
-                <li id="linkNordica"><a href="../paginas/nordica.html">MITOLOGIA NÓRDICA</a></li>
+                <li id="linkNordica"><a href="../paginas/nordica.html">MITOLOGIA EGÍPCIA</a></li>
             </ul>
         </nav>
     </header>
