--- a/front/site/paginas/footer/contato.html
+++ b/front/site/paginas/footer/contato.html
@@ -146,6 +146,39 @@
       </div>
     </div>
   </main>
+  <footer>
+    <div class="footer-container">
+
+        <div class="footer-links">
+            <ul class="ul-footer">
+                <li><a href="../index.php">Página Inicial</a></li>
+                <li><a href="../egipcia.html">Mitologia Egípcia</a></li>
+                <li><a href="../grega.html">Mitologia Grega</a></li>
+                <li><a href="../hindu.html">Mitologia Hindu</a></li>
+                <li><a href="../irlandesa.html">Mitologia Irlandesa</a></li>
+                <li><a href="../japonesa.html">Mitologia Japonesa</a></li>
+                <li><a href="../mesopotamica.html">Mitologia Mesopotâmica</a></li>
+                <li><a href="../nordica.html">Mitologia Nórdica</a></li>
+                <li><a href="../romana.html">Mitologia Romana</a></li>
+            </ul>
+        </div>
+
+    </div>
+    <div class="footer-sociais">
+        <img src="../../../../back/imagens/LYJEK(1).png" alt="">
+        <div>
+            <a href="#">Política de privacidade</a>
+            <a href="../paginas/footer/contato.html">Contato</a>
+            <a href="#">Sobre</a>
+        </div>
+        <img src="../../../back/imagens/ifmg-vertical-branca(1).png" alt="">
+
+    </div>
+
+    <div class="footer-bottom">
+        <p>&copy; 2023 LYJEK/mitologias - Todos os direitos reservados.</p>
+    </div>
+</footer>
 </body>
 
 </html>
