--- a/front/site/paginas/footer/politica-priv.html
+++ b/front/site/paginas/footer/politica-priv.html
@@ -1,72 +1,140 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="politica-priv.css">
-    <title>Política de Privacidade - LYJEK</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Política de Privacidade | SEPE</title>
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <nav>
-                <a href="../index.php">
-                    <img src="../../../../back/imagens/LYJEK.png" alt="" id="logo-foto">
-                </a>
-            </nav>
-        </header>
-        <main>
-            <section>
-                <h2>1. Informações que Coletamos</h2>
-                <p>Coletamos informações pessoais que você nos fornece voluntariamente ao utilizar nosso Site, interagir
-                    conosco ou utilizar nossos serviços.</p>
-            </section>
-            <section>
-                <h2>2. Como Usamos Suas Informações</h2>
-                <p>Utilizamos suas informações pessoais para os seguintes propósitos: Estudos para o uso de provas e do
-                    ENEM
-                </p>
-            </section>
-            <section>
-                <h2>3. Compartilhamento de Informações</h2>
-                <p>Não compartilhamos suas informações pessoais com terceiros.</p>
-            </section>
-            <section>
-                <h2>4. Cookies e Tecnologias Semelhantes</h2>
-                <p>Utilizamos cookies e tecnologias semelhantes para coletar informações não pessoais sobre sua
-                    atividade no
-                    Site.</p>
-            </section>
-            <section>
-                <h2>5. Segurança das Informações</h2>
-                <p>Implementamos medidas de segurança técnicas e organizacionais para proteger suas informações pessoais
-                    contra acesso não autorizado.</p>
-            </section>
-            <section>
-                <h2>6. Seus Direitos</h2>
-                <p>Você tem direitos relacionados às suas informações pessoais, incluindo o direito de acessar,
-                    corrigir,
-                    excluir ou solicitar a portabilidade de seus dados.</p>
-            </section>
-            <section>
-                <h2>7. Alterações nesta Política de Privacidade</h2>
-                <p>Reservamo-nos o direito de atualizar esta Política de Privacidade periodicamente. Quaisquer
-                    alterações
-                    significativas serão comunicadas através de nosso Site.</p>
-            </section>
-            <section>
-                <h2>8. Contato</h2>
-                <p>Se você tiver dúvidas, preocupações ou solicitações relacionadas a esta Política de Privacidade,
-                    entre em
-                    contato conosco através do seguinte endereço de e-mail: luiz.fernando.251107@gmail.com.</p>
-            </section>
-        </main>
-        <footer>
-            <p>&copy; Arteiro - Todos os direitos reservados</p>
-        </footer>
+    <header>
+        <a href="../paginas/index.php" id="logo"><img src="../../../../back/imagens/LYJEK.png" alt=""
+                class="logo" /></a>
+        <nav>
+            <ul class="lista-nav">
+                <li id="link-home"><a href="../paginas/index.php">HOME</a></li>
+                <li>
+                    <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
+                    <ul class="dropdown">
+                        <li id="margin-top-dropdown"><a href="../grega.html">Grega</a></li>
+                        <li class="link-dropdown" id="linkEgipcia"><a href="../egipcia.html">Egípcia</a></li>
+                        <li class="link-dropdown" id="linkIrlandesa"><a href="../irlandesa.html">Irlandesa</a></li>
+                        <li class="link-dropdown" id="linkJaponesa"><a href="../japonesa.html">Japonesa</a></li>
+                        <li class="link-dropdown" id="linkHindu"><a href="../hindu.html">Hindu</a></li>
+                        <li id="link-dropdown-excessao"><a href="../mesopotamica.html">Mesopotâmica</a></li>
+                        <li class="link-dropdown" id="linkNordica"><a href="../nordica.html">Nórdica</a></li>
+                        <li class="link-dropdown" id="linkRomana"><a href="../romana.html">Romana</a></li>
+                    </ul>
+                </li>
+                <li id="link-quiz"><a href="../quiz/egipcia.html">QUIZ EGÍPCIA</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="row">
+        <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
+            background-repeat: repeat;
+            background-size: contain;">
+        </div>
+        <div class="col-7">
+            <div class="container">
+                <section>
+                    <h1 class="h1-texto">Política de Privacidade</h1>
+                </section>
+                <section>
+                    <h2>1. Informações que Coletamos</h2>
+                    <p>Coletamos informações pessoais que você nos fornece voluntariamente ao utilizar nosso Site,
+                        interagir
+                        conosco ou utilizar nossos serviços.</p>
+                </section>
+                <section>
+                    <h2>2. Como Usamos Suas Informações</h2>
+                    <p>Utilizamos suas informações pessoais para os seguintes propósitos: Estudos para o uso de provas e
+                        do
+                        ENEM
+                    </p>
+                </section>
+                <section>
+                    <h2>3. Compartilhamento de Informações</h2>
+                    <p>Não compartilhamos suas informações pessoais com terceiros.</p>
+                </section>
+                <section>
+                    <h2>4. Cookies e Tecnologias Semelhantes</h2>
+                    <p>Utilizamos cookies e tecnologias semelhantes para coletar informações não pessoais sobre sua
+                        atividade no
+                        Site.</p>
+                </section>
+                <section>
+                    <h2>5. Segurança das Informações</h2>
+                    <p>Implementamos medidas de segurança técnicas e organizacionais para proteger suas informações
+                        pessoais
+                        contra acesso não autorizado.</p>
+                </section>
+                <section>
+                    <h2>6. Seus Direitos</h2>
+                    <p>Você tem direitos relacionados às suas informações pessoais, incluindo o direito de acessar,
+                        corrigir,
+                        excluir ou solicitar a portabilidade de seus dados.</p>
+                </section>
+                <section>
+                    <h2>7. Alterações nesta Política de Privacidade</h2>
+                    <p>Reservamo-nos o direito de atualizar esta Política de Privacidade periodicamente. Quaisquer
+                        alterações
+                        significativas serão comunicadas através de nosso Site.</p>
+                </section>
+                <section>
+                    <h2>8. Contato</h2>
+                    <p>Se você tiver dúvidas, preocupações ou solicitações relacionadas a esta Política de Privacidade,
+                        entre em
+                        contato conosco através da página de contato.
+                    <div class="botao">
+                        <a href="contato.html"><input type="button" value="CONTATO" id="btnComecar" /></a>
+                    </div></p>
+                </section>
+            </div>
+        </div>
+        <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
+            background-repeat: repeat;
+            background-size: contain;">
+        </div>
     </div>
+    <footer>
+        <div class="footer-container">
+
+            <div class="footer-links">
+                <ul class="ul-footer">
+                    <li><a href="../index.php">Página Inicial</a></li>
+                    <li><a href="../egipcia.html">Mitologia Egípcia</a></li>
+                    <li><a href="../grega.html">Mitologia Grega</a></li>
+                    <li><a href="../hindu.html">Mitologia Hindu</a></li>
+                    <li><a href="../irlandesa.html">Mitologia Irlandesa</a></li>
+                    <li><a href="../japonesa.html">Mitologia Japonesa</a></li>
+                    <li><a href="../mesopotamica.html">Mitologia Mesopotâmica</a></li>
+                    <li><a href="../nordica.html">Mitologia Nórdica</a></li>
+                    <li><a href="../romana.html">Mitologia Romana</a></li>
+                </ul>
+            </div>
+
+        </div>
+        <div class="footer-sociais">
+            <img src="../../../../back/imagens/LYJEK(1).png" alt="">
+            <div>
+                <a href="#">Política de privacidade</a>
+                <a href="../paginas/footer/contato.html">Contato</a>
+                <a href="#">Sobre</a>
+            </div>
+            <img src="../../../back/imagens/ifmg-vertical-branca(1).png" alt="">
+
+        </div>
+
+        <div class="footer-bottom">
+            <p>&copy; 2023 LYJEK/mitologias - Todos os direitos reservados.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
