Commit para segurança

--- a/front/site/quiz/egipcia.html
+++ b/front/site/quiz/egipcia.html
@@ -38,7 +38,8 @@
             <section id="introducao">
                 <h1>Antes de começar vamos explicar como ira funcionar o quiz:</h1>
                 <ol>
-                    <li>O quiz terá 10 perguntas, onde essas perguntas serão separadas em 3 niveis: fácil, intermediário e
+                    <li>O quiz terá 10 perguntas, onde essas perguntas serão separadas em 3 niveis: fácil, intermediário
+                        e
                         díficil. Serão 3 perguntas fáceis, 3 perguntas intermediárias e 4 perguntas difíceis.</li>
                     <li>Cada pergunta terá 4 alternativas: A, B, C e D</li>
                     <li>Orientação: As respostas para as perguntas estarão todas nos textos da página da respectiva
@@ -51,14 +52,14 @@
             <section id="secao-pergunta-1" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 1:</h1>
-                    <p class="pergunta">Quem é o deus do trovão na mitologia nórdica?</p>
+                    <p class="pergunta">Quem é o deus do sol na mitologia egípcia?</p>
                     <p class="dificuldade">Nível Fácil</p>
                 </div>
                 <div class="alternativas">
-                    <input type="radio" name="questao1" id="" value="errado"><label>A - Odin</label>
-                    <input type="radio" name="questao1" id="" value="errado"><label> B - Loki</label>
-                    <input type="radio" name="questao1" id="" value="certo"><label> C - Thor</label>
-                    <input type="radio" name="questao1" id="" value="errado"><label>D - Freyja</label>
+                    <input type="radio" name="questao1" id="" value="errado"><label>A - Anúbis</label>
+                    <input type="radio" name="questao1" id="" value="errado"><label>B - Osíris</label>
+                    <input type="radio" name="questao1" id="" value="certo"><label>C - Rá</label>
+                    <input type="radio" name="questao1" id="" value="errado"><label>D - Hórus</label>
                     <div class="buttonResponder"><input type="button" value="Responder" id="btnPergunta1"></div>
                 </div>
             </section>
@@ -90,21 +91,19 @@
             <section id="secao-pergunta-2" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 2:</h1>
-                    <p class="pergunta">Qual é o nome do lobo gigante que desempenha um papel importante no fim do mundo
-                        nórdico?</p>
-                    <p class="pergunta">Qual é o nome do lobo gigante que desempenha um papel importante no fim do mundo
-                        nórdico?</p>
+                    <p class="pergunta">Qual é o nome da rainha lendária do Egito que se casou com Marco Antônio e Júlio César?</p>
+
                     <p class="dificuldade">Nível Fácil</p>
                 </div>
                 <div class="alternativas">
                     <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
-                    <label> A - Fenrir</label>
+                    <label>A - Nefertiti</label>
                     <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
-                    <label> B - Sleipnir</label>
+                    <label>B - Cleópatra</label>
                     <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
-                    <label>C - Jormungandr</label>
+                    <label>C - Hatshepsut</label>
                     <input type="radio" name="questao2" class="tamanhoInputOriginal" value="certo">
-                    <label>D - Skoll</label>
+                    <label>D - Ísis</label>
                     <div class="buttonResponder">
                         <input type="button" value="Responder" id="btnPergunta2">
                     </div>
@@ -185,7 +184,8 @@
                     <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado">
                     <label>B - Mjölnir foi roubado por um gigante e Thor teve que buscá-lo em uma jornada épica.</label>
                     <input type="radio" name="questao6" class="tamanhoInputOriginal" value="certo">
-                    <label>C - Mjölnir foi presenteado a Thor por Odin e é capaz de derrotar os inimigos dos deuses.</label>
+                    <label>C - Mjölnir foi presenteado a Thor por Odin e é capaz de derrotar os inimigos dos
+                        deuses.</label>
                     <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado">
                     <label> D -Mjölnir é uma arma lendária, mas não desempenha um papel importante na mitologia
                         nórdica.</label>
@@ -226,7 +226,8 @@
                     <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado">
                     <label>A - Baldur era um deus da guerra que morreu em batalha, enfraquecendo os deuses</label>
                     <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado">
-                    <label> B - Baldur era um deus da beleza que se apaixonou por uma mortal e morreu de tristeza</label>
+                    <label> B - Baldur era um deus da beleza que se apaixonou por uma mortal e morreu de
+                        tristeza</label>
                     <input type="radio" name="questao8" class="tamanhoInputOriginal" value="certo">
                     <label> C - Baldur era imortal, e sua morte foi uma surpresa para os deuses, que ficaram
                         abalados</label>
@@ -262,12 +263,14 @@
             <section id="secao-pergunta-10" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 10:</h1>
-                    <p class="pergunta">Como a mitologia nórdica influenciou a cultura viking e suas crenças religiosas?</p>
+                    <p class="pergunta">Como a mitologia nórdica influenciou a cultura viking e suas crenças religiosas?
+                    </p>
                     <p class="dificuldade">Nível difícil</p>
                 </div>
                 <div class="alternativas">
                     <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado">
-                    <label>A - Os vikings rejeitaram completamente a mitologia nórdica em favor de outras crenças</label>
+                    <label>A - Os vikings rejeitaram completamente a mitologia nórdica em favor de outras
+                        crenças</label>
                     <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado">
                     <label>B - Os vikings abandonaram suas própriascrenças em favor do cristianismo e não foram
                         influenciados pela mitologia</label>
