--- a/front/site/quiz/egipcia.html
+++ b/front/site/quiz/egipcia.html
@@ -112,18 +112,18 @@
             <section id="secao-pergunta-3" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 3</h1>
-                    <p class="pergunta">Qual é a morada dos deuses na mitologia nórdica?</p>
+                    <p class="pergunta">Qual é o animal sagrado associado a Thoth, o deus da sabedoria, na mitologia egípcia?</p>
                     <p class="dificuldade">Nível fácil</p>
                 </div>
                 <div class="alternativas">
-                    <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado">
-                    <label>A - Valhalla</label>
-                    <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado">
-                    <label>B - Helheim</label>
-                    <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado">
-                    <label>C - Midgard</label>
                     <input type="radio" name="questao3" class="tamanhoInputOriginal" value="certo">
-                    <label>D - Asgard</label>
+                    <label>A - Íbis</label>
+                    <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado">
+                    <label>B - Gato</label>
+                    <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado">
+                    <label>C - Falcão</label>
+                    <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado">
+                    <label>D - Serpente</label>
                     <div class="buttonResponder">
                         <input type="button" value="Responder" id="btnPergunta3">
                     </div>
@@ -132,10 +132,7 @@
             <section id="secao-pergunta-4" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 4</h1>
-                    <p class="pergunta">Quem são os três deuses mais importantes da mitologia nórdica e quais são suas
-                        características distintas?</p>
-                    <p class="pergunta">Quem são os três deuses mais importantes da mitologia nórdica e quais são suas
-                        características distintas?</p>
+                    <p class="pergunta">Qual é o nome das divindades gêmeas que representam o equilíbrio e a ordem no Antigo Egito?</p>
                     <p class="dificuldade">Nível médio</p>
                 </div>
                 <div class="alternativas">
