--- a/front/site/quiz/egipcia.html
+++ b/front/site/quiz/egipcia.html
@@ -91,7 +91,8 @@
             <section id="secao-pergunta-2" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 2:</h1>
-                    <p class="pergunta">Qual é o nome da rainha lendária do Egito que se casou com Marco Antônio e Júlio César?</p>
+                    <p class="pergunta">Qual é o nome da rainha lendária do Egito que se casou com Marco Antônio e Júlio
+                        César?</p>
 
                     <p class="dificuldade">Nível Fácil</p>
                 </div>
@@ -112,7 +113,8 @@
             <section id="secao-pergunta-3" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 3</h1>
-                    <p class="pergunta">Qual é o animal sagrado associado a Thoth, o deus da sabedoria, na mitologia egípcia?</p>
+                    <p class="pergunta">Qual é o animal sagrado associado a Thoth, o deus da sabedoria, na mitologia
+                        egípcia?</p>
                     <p class="dificuldade">Nível fácil</p>
                 </div>
                 <div class="alternativas">
@@ -132,18 +134,19 @@
             <section id="secao-pergunta-4" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 4</h1>
-                    <p class="pergunta">Qual é o nome das divindades gêmeas que representam o equilíbrio e a ordem no Antigo Egito?</p>
+                    <p class="pergunta">Qual é o nome das divindades gêmeas que representam o equilíbrio e a ordem no
+                        Antigo Egito?</p>
                     <p class="dificuldade">Nível médio</p>
                 </div>
                 <div class="alternativas">
+                    <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado">
+                    <label>A - Ísis e Hórus</label>
+                    <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado">
+                    <label>B - Rá e Thoth</label>
                     <input type="radio" name="questao4" class="tamanhoInputOriginal" value="certo">
-                    <label>A - Odin (sabedoria), Thor (força), Freyja(amor)</label>
+                    <label>C - Ísis e Osíris</label>
                     <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado">
-                    <label>B - Loki(trapaça), Balder(beleza), Freyr(fertilidade)</label>
-                    <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado">
-                    <label>C - Freyja (amor), Tyr(coragem), Heimdall(vigilância)</label>
-                    <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado">
-                    <label>D - Odin(sabedoria), Freyja(amor), Thor(trovão)</label>
+                    <label>D - Seth e Bastet</label>
                     <div class="buttonResponder">
                         <input type="button" value="Responder" id="btnPergunta4">
                     </div>
@@ -152,18 +155,18 @@
             <section id="secao-pergunta-5" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 5:</h1>
-                    <p class="pergunta">O que é o Yggdrasil e qual é o seu significado na mitologia nórdica?</p>
+                    <p class="pergunta">Qual é o Livro dos Mortos e qual é o seu propósito na mitologia egípcia?</p>
                     <p class="dificuldade">Nível médio</p>
                 </div>
                 <div class="alternativas">
                     <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado">
-                    <label> A - Uma espada mágica: Representa o poder dos deuses</label>
+                    <label>A - Um livro de feitiços usados para controlar os elementos naturais</label>
                     <input type="radio" name="questao5" class="tamanhoInputOriginal" value="certo">
-                    <label>B - Uma árvore cósmica que conecta os Nove Mundos; simboliza a ordem do universo</label>
+                    <label>B - Um guia de instruções para a vida após a morte, com encantamentos e orientações</label>
                     <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado">
-                    <label> C - Uma serpente gigante que envolve o mundo; representa a destruição iminente</label>
+                    <label>C - Um registro histórico dos faraós egípcios</label>
                     <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado">
-                    <label>D - Um pássaro mágico</label>
+                    <label>D - Um código de leis que governava o Antigo Egito</label>
                     <div class="buttonResponder">
                         <input type="button" value="Responder" id="btnPergunta5">
                     </div>
