--- a/front/site/paginas/grega.html
+++ b/front/site/paginas/grega.html
@@ -39,7 +39,7 @@
     background-repeat: repeat;
     background-size: contain;">
     </div>
-    <div class="col-8">
+    <div class="col-8" style="padding: 50px;" >
       <h1 class="h1-texto">Mitologia Grega</h1>
       <p>Ela reúne um conjunto de mitos e lendas criados pelos gregos na antiguidade. O objetivo principal era de
         explicar alguns fatos, como a origem da vida, a vida após a morte, ou até mesmo os fenômenos da natureza.</p>
