--- a/front/site/paginas/hindu.html
+++ b/front/site/paginas/hindu.html
@@ -57,7 +57,7 @@
     background-repeat: repeat;
     background-size: contain;">
     </div>
-    <div class="col-8">
+    <div class="col-8" style="padding: 50px;" >
       <h1 class="h1-texto">Mitologia Hindu</h1>
       <p>Está fundada nos Vedas, que são os livros sagrados dos hindus. Segundo a crença, o próprio Brahma os escreveu.
         Brahma é o Deus supremo da tríade hindu. Seus atributos são representados pelos três poderes: criação,
