--- a/front/site/paginas/irlandesa.html
+++ b/front/site/paginas/irlandesa.html
@@ -39,8 +39,7 @@
     background-repeat: repeat;
     background-size: contain;">
     </div>
-    <div class="col-8">
-
+    <div class="col-8" style="padding: 50px;" >
       <h1 class="h1-texto">Mitologia Irlandesa</h1>
 
       <p>A mitologia irlandesa faz parte da mitologia celta, na qual também são incluídas crenças de outras regiões do
