--- a/front/site/paginas/japonesa.html
+++ b/front/site/paginas/japonesa.html
@@ -40,7 +40,7 @@
     <div class="col" style="background-image: url(../paginas/imagens/asideJapa.png);
       background-repeat: repeat;
       background-size: contain;"></div>
-    <div class="col-8">
+      <div class="col-8" style="padding: 50px;" >
       <h1 class="h1-texto">MITOLOGIA JAPONESA</h1>
 
       <p>A Mitologia Japonesa é um tesouro de histórias fascinantes, é um sistema de crenças e histórias que se
