--- a/front/site/paginas/mesopotamica.html
+++ b/front/site/paginas/mesopotamica.html
@@ -43,7 +43,7 @@
         background-size: contain;">
          
         </div>
-        <div class="col-8">
+        <div class="col-8" style="padding: 50px;" >
             <h1 class="h1-texto">Mitologia Mesopotâmica</h1>
             <p>Como grande parte das mitologias da antiguidade o povo mesopotamico eram politeístas, tinham um incontável panteão de deuses e semideuses faziam parte da religião.</p>
             <p>Apesar de a mitologia mesopotâmica ser ampla e complexa, seus deuses se organizavam em uma hierarquia clara, de acordo com a influência de seu poder. Os mais importantes eram: An (deus do céu), Enlil (deus do ar), Enki (deus da água), Ninhursag (mãe-terra), Shamash (deus do Sol e da justiça), Anu (senhor dos céus), Sin (deusa da Lua) e Ishtar (deusa da guerra e do amor).</p>
