--- a/front/site/paginas/nordica.html
+++ b/front/site/paginas/nordica.html
@@ -40,7 +40,7 @@
       background-size: contain;">
 
     </div>
-    <div class="col-8">
+    <div class="col-8" style="padding: 50px;" >
       <h1 class="h1-texto">Mitologia Nórdica</h1>
       <p>
         A <strong>mitologia nórdica</strong>, viking ou germânica, possui mais
